# reportHanter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  ORGANIZATION_SUMMARY.md  README.md  UPGRADE_TO_0.3.0.md  compatibility_check.py  config_example.json  pyproject.toml  setup.py  test_backwards_compatibility.py
.github/workflows/: ci.yml
docs/: README.md
docs/developer/: REPOSITORY_LAYOUT.md  VERSION_0.3.0_SUMMARY.md  VISUAL_IMPROVEMENTS_SUMMARY.md
docs/user-guide/: MIGRATION_GUIDE.md  UPGRADE_TO_0.3.0.md  VISUAL_IMPROVEMENTS_GUIDE.md
examples/: README.md
examples/configurations/: README.md
examples/demos/: enhanced_visualization_demo.py
reporthanter/: __init__.py  blast.py  fastp.py  fastx.py  file_utils.py  flagstat.py  kaiju.py  kraken.py  panel_report.py  panel_report_cli.py
reporthanter/core/: base.py  config.py  exceptions.py  interfaces.py  palettes.py  validation.py
reporthanter/processors/: blast_processor.py  coverage_processor.py  fastp_processor.py  flagstat_processor.py  genomad_processor.py  kaiju_processor.py  kraken_processor.py  provenance_processor.py  quast_processor.py
reporthanter/report/: dashboard.py  generator.py  sections.py
reporthanter/visualization/: __init__.py  config.py  enhanced_plots.py  integration.py  layout_engine.py  themes.py
scripts/: README.md  test_0_3_structure.py
tests/: conftest.py  test_api_v3.py  test_blast_processor.py  test_cli.py  test_cli_unit.py  test_config.py  test_dashboard.py  test_fastp_processor.py  test_flagstat_processor.py  test_generator.py  test_kaiju_processor.py  test_processors.py  test_provenance_processor.py  test_report_generator.py  test_sections_helpers.py  test_validation.py
tests/fixtures/: blastn.csv  fastp.json  flagstat.txt  kaiju.tsv  kraken.tsv
