[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "reporthanter"
version = "0.10.3"
description = "An interactive HTML report generator for sequence classification analyses."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Andreas Sjödin", email = "andreas.sjodin@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=3",
    "numpy>=2",
    "altair>=6.0,<7",
    "panel>=1.3,<2",
    "pyfastx>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=2.20",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/druvus/reporthanter"

[project.scripts]
reporthanter = "reporthanter.panel_report_cli:main"

[tool.setuptools.packages.find]
include = ["reporthanter*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
# Ship the wordmark / icon set inside the package so the rendered
# HTML can embed them as data URIs (no external network fetch).
reporthanter = ["assets/*.png", "assets/*.svg"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, I = isort,
# UP = pyupgrade (flags legacy typing syntax),
# B = bugbear, SIM = simplify.
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "altair",
    "altair.*",
    "panel",
    "panel.*",
    "pyfastx",
    "pyfastx.*",
    "pandas",
    "pandas.*",
    "numpy",
    "numpy.*",
]
ignore_missing_imports = true

# Altair's public methods (encode, add_params, properties, interactive)
# are not typed in the installed stubs; the chart-builder modules
# return expressions whose inferred type is Any.  Suppress
# warn_return_any locally rather than scattering type: ignore comments
# throughout the charting code.
[[tool.mypy.overrides]]
module = [
    "reporthanter.core.base",
    "reporthanter.processors.blast_processor",
    "reporthanter.processors.flagstat_processor",
    "reporthanter.processors.kraken_processor",
    "reporthanter.processors.kaiju_processor",
    "reporthanter.processors.coverage_processor",
    "reporthanter.report.generator",
    "reporthanter.report.sections",
    "reporthanter.report.dashboard",
]
warn_return_any = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=reporthanter --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = ["reporthanter"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
